feat: rename stats to metrics
BREAKING CHANGE: /stats => /metrics

--- a/README.org
+++ b/README.org
@@ -265,8 +265,8 @@ curl "http://localhost:8080/refile/files/$hash/namespaces/$namespace/items"
 await fetch(`http://localhost:8080/refile/files/${hash}/namespaces/${namespace}/items`).then(res => res.json())
 #+END_SRC
 
-**** 统计信息
-=GET /stats=
+**** metrics
+=GET /metrics=
 
 输出JSON:
 #+BEGIN_SRC ts
@@ -280,12 +280,12 @@ await fetch(`http://localhost:8080/refile/files/${hash}/namespaces/${namespace}/
 ***** Example
 ****** curl
 #+BEGIN_SRC sh
-curl 'http://localhost:8080/stats'
+curl 'http://localhost:8080/metrics'
 #+END_SRC
 
 ****** JavaScript
 #+BEGIN_SRC js
-await fetch('http://localhost:8080/stats').then(res => res.json())
+await fetch('http://localhost:8080/metrics').then(res => res.json())
 #+END_SRC
 
 *** Private
