--- a/README.org
+++ b/README.org
@@ -200,6 +200,8 @@ await fetch(`http://localhost:8080/refile/namespaces/${namespace}/items/${id}`, 
 
 返回 =Array<string>=.
 
+此操作支持返回[[https://github.com/ndjson/ndjson-spec][ndjson]]格式的响应, 需要 =Accept: application/x-ndjson= 请求头.
+
 ***** Example
 ****** curl
 #+BEGIN_SRC sh
@@ -217,6 +219,8 @@ await fetch('http://localhost:8080/refile/namespaces').then(res => res.json())
 获取特定命名空间下的所有项目id列表.
 
 返回id列表 =Array<string>=.
+
+此操作支持返回[[https://github.com/ndjson/ndjson-spec][ndjson]]格式的响应, 需要 =Accept: application/x-ndjson= 请求头.
 
 ***** Example
 ****** curl
@@ -236,6 +240,8 @@ await fetch(`http://localhost:8080/refile/namespaces/${namespace}/items`).then(r
 
 返回hash列表 =Array<string>=.
 
+此操作支持返回[[https://github.com/ndjson/ndjson-spec][ndjson]]格式的响应, 需要 =Accept: application/x-ndjson= 请求头.
+
 ***** Example
 ****** curl
 #+BEGIN_SRC sh
@@ -253,6 +259,8 @@ await fetch(`http://localhost:8080/refile/namespace/${namespace}/items/${id}/fil
 获取特定namespace下与特定文件相关的项目id列表.
 
 返回id列表 =Array<string>=.
+
+此操作支持返回[[https://github.com/ndjson/ndjson-spec][ndjson]]格式的响应, 需要 =Accept: application/x-ndjson= 请求头.
 
 ***** Example
 ****** curl
