feat: rename /api to /admin
BREAKING CHANGE: rename /api to /admin

--- a/README.org
+++ b/README.org
@@ -294,7 +294,7 @@ Refile提供两种可以同时启用的访问控制策略.
 
 ****** 黑名单
 ******* 获取黑名单
-=GET /api/blacklist=
+=GET /admin/blacklist=
 
 获取位于黑名单中的所有RefileId, 返回JSON表示的字符串数组 =string[]=.
 
@@ -303,12 +303,12 @@ Refile提供两种可以同时启用的访问控制策略.
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/blacklist"
+  "http://localhost:8080/admin/blacklist"
 #+END_SRC
 
 ********* fetch
 #+BEGIN_SRC js
-await fetch('http://localhost:8080/api/blacklist', {
+await fetch('http://localhost:8080/admin/blacklist', {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -316,7 +316,7 @@ await fetch('http://localhost:8080/api/blacklist', {
 #+END_SRC
 
 ******* 添加黑名单
-=PUT /api/blacklist/<id>=
+=PUT /admin/blacklist/<id>=
 
 将特定Refile加入黑名单.
 
@@ -326,12 +326,12 @@ await fetch('http://localhost:8080/api/blacklist', {
 curl \
   --request PUT \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/blacklist/$id"
+  "http://localhost:8080/admin/blacklist/$id"
 #+END_SRC
 
 ********* fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/blacklist/${id}`, {
+await fetch(`http://localhost:8080/admin/blacklist/${id}`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -340,7 +340,7 @@ await fetch(`http://localhost:8080/api/blacklist/${id}`, {
 #+END_SRC
 
 ******* 移除黑名单
-=DELETE /api/blacklist/<id>=
+=DELETE /admin/blacklist/<id>=
 
 将特定Refile从黑名单中移除.
 
@@ -350,12 +350,12 @@ await fetch(`http://localhost:8080/api/blacklist/${id}`, {
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/blacklist/$id"
+  "http://localhost:8080/admin/blacklist/$id"
 #+END_SRC
 
 ********* fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/blacklist/${id}`, {
+await fetch(`http://localhost:8080/admin/blacklist/${id}`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -365,7 +365,7 @@ await fetch(`http://localhost:8080/api/blacklist/${id}`, {
 
 ****** 白名单
 ******* 获取白名单
-=GET /api/whitelist=
+=GET /admin/whitelist=
 
 获取位于黑名单中的所有RefileId, 返回JSON表示的字符串数组 =string[]=.
 
@@ -374,12 +374,12 @@ await fetch(`http://localhost:8080/api/blacklist/${id}`, {
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIM_PASSWORD" \
-  "http://localhost:8080/api/whitelist"
+  "http://localhost:8080/admin/whitelist"
 #+END_SRC
 
 ********* fetch
 #+BEGIN_SRC js
-await fetch('http://localhost:8080/api/whitelist', {
+await fetch('http://localhost:8080/admin/whitelist', {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -387,7 +387,7 @@ await fetch('http://localhost:8080/api/whitelist', {
 #+END_SRC
 
 ******* 添加白名单
-=PUT /api/whitelist/<id>=
+=PUT /admin/whitelist/<id>=
 
 将特定Refile加入白名单.
 
@@ -397,12 +397,12 @@ await fetch('http://localhost:8080/api/whitelist', {
 curl \
   --request PUT \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/whitelist/$id"
+  "http://localhost:8080/admin/whitelist/$id"
 #+END_SRC
 
 ********* fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/whitelist/${id}`, {
+await fetch(`http://localhost:8080/admin/whitelist/${id}`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -411,7 +411,7 @@ await fetch(`http://localhost:8080/api/whitelist/${id}`, {
 #+END_SRC
 
 ******* 移除白名单
-=DELETE /api/whitelist/<id>=
+=DELETE /admin/whitelist/<id>=
 
 将特定Refile从白名单中移除.
 
@@ -421,12 +421,12 @@ await fetch(`http://localhost:8080/api/whitelist/${id}`, {
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/whitelist/$id"
+  "http://localhost:8080/admin/whitelist/$id"
 #+END_SRC
 
 ********* fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/whitelist/${id}`, {
+await fetch(`http://localhost:8080/admin/whitelist/${id}`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -452,7 +452,7 @@ await fetch(`http://localhost:8080/api/whitelist/${id}`, {
 - token的意外泄露可以被迅速处理
 
 ****** 获取所有具有token策略的频道id
-=GET /api/refile-with-token-policies=
+=GET /admin/refile-with-token-policies=
 
 获取所有具有token策略的频道id, 返回由JSON表示的字符串数组 =string[]=.
 
@@ -461,16 +461,16 @@ await fetch(`http://localhost:8080/api/whitelist/${id}`, {
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/refile-with-token-policies"
+  "http://localhost:8080/admin/refile-with-token-policies"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch('http://localhost:8080/api/refile-with-token-policies')
+await fetch('http://localhost:8080/admin/refile-with-token-policies')
 #+END_SRC
 
 ****** 获取特定频道的token策略
-=GET /api/refile/<id>/token-policies=
+=GET /admin/refile/<id>/token-policies=
 
 返回JSON:
 #+BEGIN_SRC ts
@@ -487,12 +487,12 @@ await fetch('http://localhost:8080/api/refile-with-token-policies')
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/refile/$id/token-policies"
+  "http://localhost:8080/admin/refile/$id/token-policies"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fethc(`http://localhost:8080/api/refile/${id}/token-policies`, {
+await fethc(`http://localhost:8080/admin/refile/${id}/token-policies`, {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -500,9 +500,9 @@ await fethc(`http://localhost:8080/api/refile/${id}/token-policies`, {
 #+END_SRC
 
 ****** 设置token策略
-=PUT /api/refile/<id>/token-policies/write-token-required=
-=PUT /api/refile/<id>/token-policies/read-token-required=
-=PUT /api/refile/<id>/token-policies/delete-token-required=
+=PUT /admin/refile/<id>/token-policies/write-token-required=
+=PUT /admin/refile/<id>/token-policies/read-token-required=
+=PUT /admin/refile/<id>/token-policies/delete-token-required=
 
 Payload必须是一个布尔值.
 
@@ -514,12 +514,12 @@ curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
   --header "Content-Type: application/json" \
   --data "$WRITE_TOKEN_REQUIRED" \
-  "http://localhost:8080/api/refile/$id/token-policies/write-token-required"
+  "http://localhost:8080/admin/refile/$id/token-policies/write-token-required"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/refile/${id}/token-policies/write-token-required`, {
+await fetch(`http://localhost:8080/admin/refile/${id}/token-policies/write-token-required`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -530,9 +530,9 @@ await fetch(`http://localhost:8080/api/refile/${id}/token-policies/write-token-r
 #+END_SRC
 
 ****** 移除token策略
-=DELETE /api/refile/<id>/token-policies/write-token-required=
-=DELETE /api/refile/<id>/token-policies/read-token-required=
-=DELETE /api/refile/<id>/token-policies/delete-token-required=
+=DELETE /admin/refile/<id>/token-policies/write-token-required=
+=DELETE /admin/refile/<id>/token-policies/read-token-required=
+=DELETE /admin/refile/<id>/token-policies/delete-token-required=
 
 ******* Example
 ******** curl
@@ -540,12 +540,12 @@ await fetch(`http://localhost:8080/api/refile/${id}/token-policies/write-token-r
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/refile/$id/token-policies/write-token-required"
+  "http://localhost:8080/admin/refile/$id/token-policies/write-token-required"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/refile/${id}/token-policies/write-token-required`, {
+await fetch(`http://localhost:8080/admin/refile/${id}/token-policies/write-token-required`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -554,7 +554,7 @@ await fetch(`http://localhost:8080/api/refile/${id}/token-policies/write-token-r
 #+END_SRC
 
 ****** 获取所有具有token的RefileId
-=GET /api/refile-with-tokens=
+=GET /admin/refile-with-tokens=
 
 获取所有具有token的RefileId, 返回由JSON表示的字符串数组`string[]`
 
@@ -563,12 +563,12 @@ await fetch(`http://localhost:8080/api/refile/${id}/token-policies/write-token-r
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/refile-with-tokens"
+  "http://localhost:8080/admin/refile-with-tokens"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/refile-with-tokens`, {
+await fetch(`http://localhost:8080/admin/refile-with-tokens`, {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -576,7 +576,7 @@ await fetch(`http://localhost:8080/api/refile-with-tokens`, {
 #+END_SRC
 
 ****** 获取特定Refile的所有token信息
-=GET /api/refile/<id>/tokens=
+=GET /admin/refile/<id>/tokens=
 
 获取特定Refile的所有token信息, 返回JSON表示的token信息数组
 =Array<{ token: string, write: boolean, read: boolean, delete: boolean }>=.
@@ -586,12 +586,12 @@ await fetch(`http://localhost:8080/api/refile-with-tokens`, {
 #+BEGIN_SRC sh
 curl \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/refile/$id/tokens"
+  "http://localhost:8080/admin/refile/$id/tokens"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/refile/${id}/tokens`, {
+await fetch(`http://localhost:8080/admin/refile/${id}/tokens`, {
   headers: {
     'Authorization': `Bearer ${adminPassword}`
   }
@@ -599,7 +599,7 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens`, {
 #+END_SRC
 
 ****** 为特定Refile的token设置write权限
-=PUT /api/refile/<id>/tokens/<token>/write=
+=PUT /admin/refile/<id>/tokens/<token>/write=
 
 添加/更新token, 为token设置write权限.
 
@@ -609,12 +609,12 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens`, {
 curl \
   --request PUT \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/refile/$id/tokens/$token/log"
+  "http://localhost:8080/admin/refile/$id/tokens/$token/log"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/refile/${id}/tokens/$token/log`, {
+await fetch(`http://localhost:8080/admin/refile/${id}/tokens/$token/log`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -623,7 +623,7 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens/$token/log`, {
 #+END_SRC
 
 ****** 取消特定Refile的token的write权限
-=DELETE /api/refile/<id>/tokens/<token>/write=
+=DELETE /admin/refile/<id>/tokens/<token>/write=
 
 取消token的read权限.
 
@@ -633,12 +633,12 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens/$token/log`, {
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/refile/$id/tokens/$token/write"
+  "http://localhost:8080/admin/refile/$id/tokens/$token/write"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/write`, {
+await fetch(`http://localhost:8080/admin/refile/${id}/tokens/${token}/write`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -647,7 +647,7 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/write`, {
 #+END_SRC
 
 ****** 为特定Refile的token设置read权限
-=PUT /api/refile/<id>/tokens/<token>/read=
+=PUT /admin/refile/<id>/tokens/<token>/read=
 
 添加/更新token, 为token设置read权限.
 
@@ -657,12 +657,12 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/write`, {
 curl \
   --request PUT \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/refile/$id/tokens/$token/read"
+  "http://localhost:8080/admin/refile/$id/tokens/$token/read"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/read`, {
+await fetch(`http://localhost:8080/admin/refile/${id}/tokens/${token}/read`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -671,7 +671,7 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/read`, {
 #+END_SRC
 
 ****** 取消特定Refile的token的read权限
-=DELETE /api/refile/<id>/tokens/<token>/read=
+=DELETE /admin/refile/<id>/tokens/<token>/read=
 
 取消token的read权限.
 
@@ -681,12 +681,12 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/read`, {
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/refile/$id/tokens/$token/read"
+  "http://localhost:8080/admin/refile/$id/tokens/$token/read"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/read`, {
+await fetch(`http://localhost:8080/admin/refile/${id}/tokens/${token}/read`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -695,7 +695,7 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/read`, {
 #+END_SRC
 
 ****** 为特定Refile的token设置delete权限
-=PUT /api/refile/<id>/tokens/<token>/delete=
+=PUT /admin/refile/<id>/tokens/<token>/delete=
 
 添加/更新token, 为token设置delete权限.
 
@@ -705,12 +705,12 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/read`, {
 curl \
   --request PUT \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/refile/$id/tokens/$token/delete"
+  "http://localhost:8080/admin/refile/$id/tokens/$token/delete"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/delete`, {
+await fetch(`http://localhost:8080/admin/refile/${id}/tokens/${token}/delete`, {
   method: 'PUT'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
@@ -719,7 +719,7 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/delete`, {
 #+END_SRC
 
 ****** 取消特定Refile的token的delete权限
-=DELETE /api/refile/<id>/tokens/<token>/delete=
+=DELETE /admin/refile/<id>/tokens/<token>/delete=
 
 取消token的delete权限.
 
@@ -729,12 +729,12 @@ await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/delete`, {
 curl \
   --request DELETE \
   --header "Authorization: Bearer $ADMIN_PASSWORD" \
-  "http://localhost:8080/api/refile/$id/tokens/$token/delete"
+  "http://localhost:8080/admin/refile/$id/tokens/$token/delete"
 #+END_SRC
 
 ******** fetch
 #+BEGIN_SRC js
-await fetch(`http://localhost:8080/api/refile/${id}/tokens/${token}/delete`, {
+await fetch(`http://localhost:8080/admin/refile/${id}/tokens/${token}/delete`, {
   method: 'DELETE'
 , headers: {
     'Authorization': `Bearer ${adminPassword}`
