--- a/README.org
+++ b/README.org
@@ -556,7 +556,7 @@ await fetch(`http://localhost:8080/admin/refile/${namespace}/token-policies/writ
 ****** 获取所有具有token的namespace
 =GET /admin/refile-with-tokens=
 
-获取所有具有token的namespace, 返回由JSON表示的字符串数组`string[]`
+获取所有具有token的namespace, 返回由JSON表示的字符串数组 =string[]=.
 
 ******* Example
 ******** curl
