--- a/README.org
+++ b/README.org
@@ -86,28 +86,25 @@ volumes:
 **** upload file
 =PUT /refile/files/<hash>=
 
-使用 SHA-256 作为 Hash 函数.
-每个文件会以 512 KiB 为切割点计算 hash, 并使用 HashList 的顶部 Hash 作为最终的文件 Hash 值.
-在发送文件前, 会先发送此 HashList 至服务器, 这是为了能在传输早期拒绝错误文件的上传.
+上传文件.
 
-FormData 将文件作为表单的一部分, 以 =multipart/form-data= 的类型上传
+*被上传的文件必须先通过其他API建立引用, 如果文件的引用数为零, 上传会被拒绝.*
 
-上传需要提供三项参数:
-- 文件(二进制数据, 通过FormData)
-- 文件的Hash值(通过URL提供)
-- 文件的分段Hash值(hash数组, 通过FormData)
+上传文件时需要提供三个参数:
+- 二进制文件, 由FormData的file字段提供, 一次只能上传一个文件, 表单的编码必须为 =multipart/form-data=.
+- 将文件按512KiB为切割点进行分段, 计算每个段的SHA-256 Hash, 将Hash的16进制字符串形式保存为有序数组hashList.
+  由FormData的多个同名hash字段来提供先前计算出的hashList里的元素.
+- 将先前计算出的hashList里的16进制表示的字符串数组连接起来, 计算新字符串的SHA-256 Hash, 在URL里提供此Hash值的16进制字符串形式.
 
-如果相同Hash的文件已经存在, 则上传会立即结束.
-会分段校验hash值, 一旦段落的hash不对, 就会由服务器方断开连接.
+上传参数如此复杂是为了能让Refile尽早拒绝错误和重复的文件.
+该API需要的参数过于复杂, 因此几乎无法通过curl, fetch等低级客户端/API进行使用, 实现客户端时建议参考[[https://github.com/BlackGlory/refile-js][refile-js]]的实现.
 
-文件不存在时, 返回201
-文件已存在时, 返回200
+文件不存在时, 返回201.
+文件已存在时, 返回200.
 在Location里包含文件在存储器上的URI.
 
-文件hash校验错误时, 返回409
-服务器存储空间不足时, 返回507
-
-*被上传的文件必须先建立引用, 如果文件的引用数为零, 上传会被拒绝.*
+文件hash校验错误时, 返回409.
+服务器存储空间不足时, 返回507.
 
 **** get file info
 =GET /refile/files/<hash>=
