--- a/README.org
+++ b/README.org
@@ -1,7 +1,10 @@
 * Refile
 一个受IPFS启发的Web友好的自托管微服务,
-以 HTTP 为接口, 提供基于内容寻址的资源管理和基于引用计数的垃圾回收功能.
+以HTTP为接口, 提供基于内容寻址的资源上传和基于引用计数的垃圾回收功能.
 带有基于token和名单的访问控制策略.
+
+由于Refile是在存储后端不可知的假设下开发的, 通过Refile上传的文件会丢失它的文件名和MIME type等元数据.
+如需保留相关元数据, 则应该通过其他服务来实现.
 
 ** Quickstart
 #+BEGIN_SRC sh
